# Truva

./: .env.example  .env.local  .gitignore  .graphifyignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  Truva_Frontier_Implementation_Guide.docx  Truva_Frontier_Track_Guide.docx  agent-passport-README.md  colosseum-frontier-validation.html  colosseum-frontier-validation.xml  docker-compose.dev.yml  docker-compose.yml  generate_structure_pdf.py  index.html  next.config.mjs  package-lock.json  package.json  railway.json  temp_mmd.json  temp_mmd.txt  tsconfig.json  ~$uva_Frontier_Implementation_Guide.docx
.superstack/: idea-context.md
app/: .env.example  globals.css  layout.tsx  next.config.js  package-lock.json  package.json  page.tsx  providers.tsx  tailwind.config.js  tailwind.config.ts  tsconfig.json  waitlist.json
demos/: jupiter-trust-dca.ts  zerion-trust-agent.ts
docs/: video-prompts-and-script.md
grant-application/: milestones.md  superteam-grant-application.md  technical-proof-of-work.md
programs/trustgate/: Cargo.toml
programs/trustgate/src/: errors.rs  lib.rs
programs/trustgate/src/instructions/: close_passport.rs  freeze_passport.rs  initialize_passport.rs  migrate_passport.rs  mod.rs  process_payment.rs  process_payment_sol.rs  process_payment_spl.rs  process_spl_payment.rs  update_trust.rs  update_trust_tier.rs
programs/trustgate/src/state/: mod.rs  passport.rs
scripts/: gen_doc_main.py  gen_doc_part1.py  gen_doc_part2.py  seedAgents.ts  simulateTransactions.ts
sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  (+4 more)
(+245 files in other folders)
