[package]
name = "trustgate"
version = "0.1.0"
description = "TrustGate - Solana program for AI agent trust-gated payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustgate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
